<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06E3FF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/please_vote"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="90dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="150dp"
        android:text="@string/id" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input1"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="89dp"
        android:background="#FFFFFF"
        android:hint="@string/write_your_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input2"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="149dp"
        android:background="#FFFFFF"
        android:hint="@string/write_your_id" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="233dp"
        android:background="@color/white"
        android:spinnerMode="dropdown"
        android:entries="@array/candidate_arrays"
        android:prompt="@string/candidate_prompt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="265dp"
        android:text="@string/vote" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="267dp"
        android:text="@string/togglebutton"
        android:textOff="@string/Refuse"
        android:textOn="@string/Accept" />

</RelativeLayout>